--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/ae99efb87b.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="bg-dark">
@@ -31,9 +32,6 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -57,9 +55,11 @@
 
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
+                    <form class="d-flex align-items-center" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                        <button id="searchBtn" class="btn btn-outline-dark" type="submit">Search</button>
+                        <button id="searchBtn" class="btn me-2 btn-outline-dark" type="submit">Search</button>
+                        <div class="user cursor-pointer"><i class="fa-solid fa-user-circle" data-bs-toggle="modal"
+                                data-bs-target="#signModal" aria-hidden="true"></i></div>
                     </form>
                 </div>
             </div>
@@ -82,30 +82,82 @@
     </div>
 
 
-    <div class="modal fade" id="moreCategoriesModal" tabindex="-1" aria-labelledby="moreCategoriesModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="moreCategoriesModalLabel">More Categories</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <!-- You can populate this with dynamic categories via JavaScript -->
-        <p>Here are more categories you can choose from:</p>
-        <div id="modal-category-list" class="d-flex flex-wrap gap-2">
-          
-          <!-- ... -->
+
+    <div class="modal fade" id="signModal" tabindex="-1" aria-labelledby="signModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="signModalLabel">SIGN UP</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body d-flex flex-column gap-2">
+                    <div id="" class="d-flex flex-column">
+                        <div class="">
+                            <label for="exampleFormControlInput1" class="form-label">Name</label>
+                            <input type="text" class="form-control nameInp" id="exampleFormControlInput1"
+                                placeholder="Hasnain" required>
+                        </div>
+                        <div class="">
+                            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                            <input type="email" class="form-control emailInp" id="exampleFormControlInput1"
+                                placeholder="name@example.com" required>
+                        </div>
+                        <div class="d-flex flex-column mt-2">
+                            <div>
+                                <label for="inputPassword6" class="col-form-label">Password</label>
+                            </div>
+                            <div>
+                                <input placeholder="must be 8 character long" type="password" id="inputPassword6"
+                                    class="form-control" aria-describedby="passwordHelpInline" required>
+                            </div>
+
+                        </div>
+                        <div>
+                            <label for="formFile" class="form-label py-2 m-0 mt-2">Enter Profile Picture </label>
+                            <input class="form-control" type="file" id="formFile">
+                        </div>
+                    </div>
+
+                    <div class="mt-2">
+                        <span>already have an account ? <span id="">LOGIN</span></span>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="modal-close btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button id="signUPBtn" type="submit" class="btn btn-outline-dark" disabled>Sign
+                        Up</button>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="modal-close btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      </div>
     </div>
-  </div>
-</div>
+
+    <div class="modal fade" id="moreCategoriesModal" tabindex="-1" aria-labelledby="moreCategoriesModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="moreCategoriesModalLabel">More Categories</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- You can populate this with dynamic categories via JavaScript -->
+                    <p>Here are more categories you can choose from:</p>
+                    <div id="modal-category-list" class="d-flex flex-wrap gap-2">
+
+                        <!-- ... -->
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="modal-close btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="/js/signup.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
         </script>
