--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                     <div id="" class="d-flex flex-column">
                         <div class="">
                             <label for="exampleFormControlInput1" class="form-label">Name</label>
-                            <input type="text" class="form-control nameInp" id="exampleFormControlInput1"
+                            <input type="text" class="form-control nameInp" id="exampleFormControlInput2"
                                 placeholder="Hasnain" required>
                         </div>
-                        <div class="">
-                            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                        <div class="mt-3">
+                            <label for="exampleFormControlInput1" class="form-label ">Email address</label>
                             <input type="email" class="form-control emailInp" id="exampleFormControlInput1"
                                 placeholder="name@example.com" required>
                         </div>
