--- a/index.html
+++ b/index.html
@@ -88,45 +88,18 @@
         <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="signModalLabel">SIGN UP</h5>
+                    <h5 class="modal-title" id="signModalLabel">Account</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body d-flex flex-column gap-2">
-                    <div id="" class="d-flex flex-column">
-                        <div class="">
-                            <label for="exampleFormControlInput1" class="form-label">Name</label>
-                            <input type="text" class="form-control nameInp" id="exampleFormControlInput2"
-                                placeholder="Hasnain" required>
-                        </div>
-                        <div class="mt-3">
-                            <label for="exampleFormControlInput1" class="form-label ">Email address</label>
-                            <input type="email" class="form-control emailInp" id="exampleFormControlInput1"
-                                placeholder="name@example.com" required>
-                        </div>
-                        <div class="d-flex flex-column mt-2">
-                            <div>
-                                <label for="inputPassword6" class="col-form-label">Password</label>
-                            </div>
-                            <div>
-                                <input placeholder="must be 8 character long" type="password" id="inputPassword6"
-                                    class="form-control" aria-describedby="passwordHelpInline" required>
-                            </div>
-
-                        </div>
-                        <div>
-                            <label for="formFile" class="form-label py-2 m-0 mt-2">Enter Profile Picture </label>
-                            <input class="form-control" type="file" id="formFile">
-                        </div>
-                    </div>
-
-                    <div class="mt-2">
-                        <span>already have an account ? <span id="">LOGIN</span></span>
-                    </div>
+                    <a href="signup.html" id="signUPBtn" class="btn btn-outline-dark">Sign
+                        Up</a>
+                    <a href="login.html" id="logInBtn" class="btn btn-dark">Log In
+                        </a>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="modal-close btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button id="signUPBtn" type="submit" class="btn btn-outline-dark" disabled>Sign
-                        Up</button>
+                    
                 </div>
             </div>
         </div>
@@ -157,7 +130,6 @@
 
 
     <script type="module" src="/js/main.js"></script>
-    <script type="module" src="/js/signup.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
         </script>
