adding profile page

--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
                     </div>
 
                     <div class="mt-2">
-                        <span>already have an account ? <a href="signup.html" id="">sign up</a></span>
+                        <span>don't have an account ? <a href="signup.html" id="">sign up</a></span>
                     </div>
                 </div>
                 <div class="modal-footer mt-3">
