--- a/signup.html
+++ b/signup.html
@@ -18,16 +18,16 @@
 </head>
 
 <body>
-    <div class="d-flex bg-body-tertiary p-2 w-100 h-100 justify-content-center align-items-center">
-        <div class="modal-dialog modal-dialog-scrollable">
-            <div class="modal-content">
+    <div class="d-flex bg-dark p-2 w-100 h-100 justify-content-center align-items-center">
+        <div class=" modal-dialog  modal-dialog-scrollable">
+            <div class="modal-content bg-body-tertiary">
                 <div class="modal-header">
                     <h5 class="modal-title fs-2" id="signModalLabel">SIGN UP</h5>
                 </div>
                 <div class="modal-body d-flex flex-column">
                     <div id="" class="d-flex flex-column">
                         <div class="">
-                            <label for="exampleFormControlInput1" class="form-label">Name</label>
+                            <label for="exampleFormControlInput2" class="form-label">Name</label>
                             <input type="text" class="form-control nameInp" id="exampleFormControlInput2"
                                 placeholder="Hasnain" required>
                         </div>
@@ -38,40 +38,47 @@
                         </div>
                         <div class="d-flex flex-column">
                             <div>
-                                <label for="inputPassword6" class="col-form-label">Password</label>
+                                <label for="inputPassword6" class="col-form-label form-label">Password</label>
                             </div>
                             <div>
                                 <input placeholder="must be 8 character long" type="password" id="inputPassword6"
                                     class="form-control" aria-describedby="passwordHelpInline" required>
                             </div>
+                            <div id="validation" class="d-flex flex-column mt-2">
+                                <p class="m-0 d-flex align-items-center gap-2 text-secondary fs-6"><i class="fa-solid fa-xmark"></i>Aleast 8 characters</p>
+                                <p class="m-0 d-flex align-items-center gap-2 text-secondary fs-6"><i class="fa-solid fa-xmark"></i>Aleast 1 upper case</p>
+                                <p class="m-0 d-flex align-items-center gap-2 text-secondary fs-6"><i class="fa-solid fa-xmark"></i>Aleast 1 lower case</p>
+                                <p class="m-0 d-flex align-items-center gap-2 text-secondary fs-6"><i class="fa-solid fa-xmark"></i>Aleast 1 number</p>
+                                
+                            </div>
 
                         </div>
                         <div>
-                            <label for="formFile" class="form-label py-2 m-0">Enter Profile Picture </label>
+                            <!-- <label for="formFile" class="form-label py-2 m-0">Enter Profile Picture </label>
                             <input class="form-control" type="file" id="formFile">
                         </div>
-                        <img id="enterdImage" src="" class="img-thumbnail d-none mt-2" alt="...">
+                        <img id="enterdImage" src="" class="img-thumbnail d-none mt-2" alt="..."> -->
 
-                    </div>
+                        </div>
 
-                    <div class="mt-2">
-                        <span>already have an account ? <a href="login.html" id="">login</a></span>
+                        <div class="mt-2">
+                            <span id="already">already have an account ? <a href="login.html" id="">login</a></span>
+                        </div>
                     </div>
-                </div>
-                <div class="modal-footer mt-2">
-                    <a href="index.html" class="modal-close btn btn-outline-secondary">Close</a>
-                    <button id="signUPBtn" type="submit" class="btn btn-dark d-flex align-items-center" disabled>
-                        Sign
-                        Up
-                    </button>
+                    <div class="modal-footer mt-3">
+                        <a href="index.html" class="modal-close btn btn-outline-secondary">Close</a>
+                        <button id="signUPBtn" type="submit" class="btn btn-dark d-flex align-items-center" disabled>
+                            Sign
+                            Up
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <script type="module" src="/js/signup.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
-        </script>
+        <script type="module" src="/js/signup.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
+            </script>
 </body>
 
 </html>
