--- a/dashboard.html
+++ b/dashboard.html
@@ -10,9 +10,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="/bootstrap-5.3.6-dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/ae99efb87b.js" crossorigin="anonymous"></script>
     <style>
         body {
@@ -58,26 +58,40 @@
             <div id="sideBar" class="d-none d-md-block col-md-3 col-lg-2 sidebar p-0">
                 <div class="d-md-none ms-auto text-white p-3 py-2 mt-2 fs-2">
                     Welcome, <span class="userName">User</span>
-                    
+
                 </div>
                 <div>
-                    <div class="sidebarItem d-flex justify-content-between align-items-center">
-                    <a href="#">Profile</a>
-                    <i class="fa-solid fa-user pe-3" aria-hidden="true"></i>
+                    <div id="dashboardsidebar" class="sidebarItem d-flex justify-content-between align-items-center">
+                        <a href="#">Dashboard</a>
+                        <i class="fa-solid fa-user pe-3" aria-hidden="true"></i>
+                    </div>
+                    <div id="addProductSidebar" class="sidebarItem d-flex justify-content-between align-items-center">
+                        <a href="#">Add Product </a>
+                        <i class="fa-solid fa-plus pe-3"></i>
+                    </div>
                 </div>
-                <div class="sidebarItem d-flex justify-content-between align-items-center">
-                    <a href="#">My Cart</a>
-                    <i class="fa-solid fa-shopping-cart pe-3"></i>
+                <div class="d-md-none p-4 px-3 align-bottom">
+                    <button class="logout btn btn-outline-light btn-sm  w-100 align-bottom"
+                        id="logoutBtn">Logout</button>
                 </div>
-                </div>
-                 <div class="d-md-none p-4 px-3 align-bottom">
-                    <button class="logout btn btn-outline-light btn-sm  w-100 align-bottom" id="logoutBtn">Logout</button>
-                 </div>
             </div>
 
             <!-- Main Content -->
-            <div class="col-md-9 col-lg-10 p-4">
+            <div id="dashboardDiv" class=" col-md-9 col-lg-10 p-4">
                 <h2>Welcome to the Dashboard</h2>
+                <p>This is your main content area.</p>
+
+                <div class="card mt-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Quick Stats</h5>
+                        <p class="card-text">You can display user-related data here after fetching it from Firestore.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <div id="addProductDiv" class="d-none col-md-9 col-lg-10 p-4">
+                <h2>Add a product</h2>
                 <p>This is your main content area.</p>
 
                 <div class="card mt-4">
@@ -93,7 +107,9 @@
     </div>
 
     <script type="module" src="/js/dashboard.js"></script>
-
+    <script src="/bootstrap-5.3.6-dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
