added cart functionality

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     <form class="d-flex align-items-center" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                         <button id="searchBtn" class="btn me-2 btn-outline-dark" type="submit">Search</button>
-                        <div class="user cursor-pointer"><i class="fa-solid fa-user-circle" data-bs-toggle="modal"
-                                data-bs-target="#signModal" aria-hidden="true"></i></div>
+                        <a href="javascript:void(0)" id="homeProfileBtn" class="user cursor-pointer text-dark"><i class="fa-solid fa-user-circle" data-bs-toggle="modal"
+                                data-bs-target="#signModal" aria-hidden="true"></i></a>
                     </form>
                 </div>
             </div>
