--- a/userProfile.html
+++ b/userProfile.html
@@ -55,16 +55,16 @@
                             </div>
                             <div class="d-flex align-items-center gap-2 mt-2">
                                 <button id="verifyBtn" class="btn btn-primary">Verify</button>
-                                <button type="button" class=" d-sm-none btn btn-dark"
-                                    data-bs-toggle="modal" data-bs-target="#myModal">
+                                <button type="button" class="editBtn d-sm-none btn btn-dark"
+                                    data-bs-toggle="modal" data-bs-target="#editModal">
                                     Edit Profile
                                 </button>
                             </div>
                         </div>
                     </div>
                     <div>
-                        <button type="button" class="d-none d-sm-block btn btn-dark mt-4" data-bs-toggle="modal"
-                            data-bs-target="#myModal">
+                        <button type="button" class="editBtn d-none d-sm-block btn btn-dark mt-4" data-bs-toggle="modal"
+                            data-bs-target="#editModal">
                             Edit Profile
                         </button>
                     </div>
@@ -79,10 +79,10 @@
                             <p class="m-0">This is your cart.</p>
                         </div>
                         <div class="d-flex gap-2 mb-3">
-                            <button id="editCart" class="btn btn-light"><i class="fa-solid fa-pen"></i></button>
-                            <button class="d-none btn btn-outline-light"><i class="fa-solid fa-xmark"></i></button>
-                            <button class="d-none btn btn-outline-light"><i class="fa-solid fa-trash"></i></button>
-                            <button class="d-none btn btn-light"><i class="fa-solid fa-check"></i></button>
+                            <button id="editCart" class="btn btn-sm btn-light"><i class="fa-solid fa-pen"></i></button>
+                            <button class="d-none btn btn-sm btn-outline-light"><i class="fa-solid fa-xmark"></i></button>
+                            <button class="d-none btn btn-sm btn-outline-light"><i class="fa-solid fa-trash"></i></button>
+                            <button class="d-none btn btn-sm btn-light"><i class="fa-solid fa-check"></i></button>
                         </div>
                     </div>
 
@@ -93,12 +93,12 @@
         </div>
 
 
-        <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
 
                     <div class="modal-header">
-                        <h5 class="modal-title" id="myModalLabel">Edit Profile</h5>
+                        <h5 class="modal-title" id="editModalLabel">Edit Profile</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
 
@@ -107,21 +107,21 @@
                             <!-- Text input -->
                             <div class="mb-3">
                                 <label for="textInput" class="form-label">Enter New Name</label>
-                                <input type="text" class="form-control" id="textInput" placeholder="Enter item name"
+                                <input type="text" class="form-control" id="editName" placeholder="Enter item name"
                                     required>
                             </div>
 
                             <!-- File input -->
                             <div class="mb-3">
                                 <label for="imageInput" class="form-label">Upload Profile Image</label>
-                                <input type="file" class="form-control" id="imageInput" accept="image/*" required>
+                                <input type="file" class="form-control" id="editImage" accept="image/*" required>
                             </div>
                         </form>
                     </div>
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" form="modalForm" class="btn btn-dark">Save</button>
+                        <button type="submit" form="modalForm" class="btn btn-dark" id="saveEditBtn">Save</button>
                     </div>
 
                 </div>
