added functionality to set profile pic

--- a/login.html
+++ b/login.html
@@ -51,7 +51,7 @@
                 <div class="modal-footer mt-3">
                     <button type="button" class="modal-close btn btn-outline-secondary"
                         data-bs-dismiss="modal">Close</button>
-                    <button id="loginBtn" class="btn btn-dark d-flex align-items-center" disabled>Log In
+                    <button type="submit" id="loginBtn" class="btn btn-dark d-flex align-items-center" disabled>Log In
                         
                     </button>
                 </div>
