--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <div class="container-fluid bg-body-tertiary">
-        <nav class="navbar navbar-expand-md bg-body-tertiary container-sm">
+        <nav class="navbar navbar-expand-md bg-body-tertiary container">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">H&M Store</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -66,7 +66,7 @@
             </div>
         </nav>
     </div>
-    <div id="main" class="container-sm">
+    <div id="main" class="container-fluid">
         <div id="cards-div">
 
 
